updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi I am 24 years old and have a furbaby name Momo!  </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born and raised in San Diego for most of my life, but have moved around here and there</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Although I love staying at home binge watching my fav series, I enjoy being active as well by hiking or going to the gym! I also love being a foodie so discovering new dessert shops or cute restaurants is one of my favorite past times.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would love to work as a game developer at Sony (Playstation)!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live with two of my bestest friends in San Diego</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to gain more knowledge and skills in order to further develop my interests and understanding of the field.</p>
     </section>
 
     <footer id="footer">
