--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Hi I am 24 years old and a dogmom to a Pekingese named Momo!  </p>
+      <p>Hi I am 24 years old and a dogmom to a Pekingese named Momo! I'm also part of the BTS ARMY since 2014 (iykyk)  </p>
       <h1>Where I'm From</h1>
       <p>I was born and raised in San Diego for most of my life, but have moved around here and there</p>
       <h1>What are your favorite hobbies?</h1>
