--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>I was born and raised in San Diego for most of my life, but have moved around here and there</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Although I love staying at home binge watching my fav series and playing games! I also love being a foodie so discovering new dessert shops or cute restaurants is one of my favorite past times</p>
+      <p>I love staying at home binge watching my fav series and playing games! I also love being a foodie so discovering new dessert shops or cute restaurants is one of my favorite past times</p>
       <h1>What's your dream job?</h1>
       <p>I would love to work as a game developer at Sony (Playstation)!</p>
       <h1>Where do you live?</h1>
